Fix padding in footer so that contact links aren't wrapped prematurely.

--- a/css/style.scss
+++ b/css/style.scss
@@ -119,7 +119,8 @@ footer {
     background-color: $brand_primary;
     text-align: center;
     color: #fff;
-    padding: 80px;
+    padding-top: 80px;
+    padding-bottom: 80px;
 
     .contact-me {
         padding-bottom: 30px;
